deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeigniter-api
  labels:
    app: codeigniter-api
spec:
  strategy:
    type: RollingUpdate
  replicas: 3
  selector:
    matchLabels:
      app: codeigniter-api
  template:
    metadata:
      labels:
        app: codeigniter-api
    spec:
      containers:
        - name: codeigniter-api
          image: gmarconsidom/codeigiter-api:v0.3
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - mountPath: /app/myapp/writable/session
              name: codeigniter-api-data
      volumes:
        - name: codeigniter-api-data
          persistentVolumeClaim:
            claimName: codeigniter-api-vol
