ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-services
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
    # konghq.com/plugins: user1-auth,rate-paid-tier,platinum-paid-tier
spec:
  rules:
    - http:
        paths:
          - path: /chuck
            pathType: Prefix
            backend:
              service:
                name: chuck-quote-service
                port:
                  number: 8080
          - path: /back2future
            pathType: Prefix
            backend:
              service:
                name: back2future-quote-service
                port:
                  number: 80
          - path: /codei
            pathType: Prefix
            backend:
              service:
                name: codeigniter-api
                port:
                  number: 80
